<resources>
    <string name="app_name">Beauty Todo</string>
    <string name="login_title">Hello \nthere, you…</string>
    <string name="sign_up_title">Hello \nnew comer, you…</string>
    <string name="user_name">Your name…</string>
    <string name="password">Password</string>
    <string name="re_password">Re-password</string>
    <string name="hello_user">Hello %s</string>
    <string name="your_list">Your lists</string>
    <string name="enter_activity">Enter activity…</string>
    <string name="enter_todo">Enter todo…</string>
    <string name="login">Login</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="sign_up">Sign up</string>
    <string name="fill_something">Fill something...</string>
</resources>
