<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@mipmap/bg_main"
                                             android:padding="10dp">

    <android.support.constraint.Guideline
            android:id="@+id/horizontal_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4"/>

    <TextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/login_title"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            android:shadowColor="@color/colorWhite"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline"/>

    <EditText
            android:id="@+id/email_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:alpha="0.85"
            android:background="@drawable/bg_login"
            android:ems="10"
            android:hint="@string/user_name"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:singleLine="true"
            android:textColorHint="@color/colorText"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_guideline"/>

    <EditText
            android:id="@+id/password_edit_text"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="5dp"
            android:alpha="0.85"
            android:background="@drawable/bg_login"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingStart="@dimen/edit_text_padding"
            android:paddingEnd="@dimen/edit_text_padding"
            android:textColorHint="@color/colorText"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit_text"/>

    <Button
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_edit_text"/>

    <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="5dp"
            android:textAlignment="viewEnd"
            android:background="@null"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

</android.support.constraint.ConstraintLayout>