<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/bg_main">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

        <TextView
                android:id="@+id/back_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_back"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorWhite"
                android:drawableTintMode="src_atop"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/back"
                android:textColor="@color/colorWhite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/edit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:id="@+id/todo_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:layout_marginTop="20dp"
                android:textSize="40sp"
                android:shadowColor="@color/colorBorder"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/back_tv"
                tools:text="TODO name"/>

        <EditText
                android:id="@+id/enter_todo_edt"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/bg_enter_task"
                android:gravity="center_vertical"
                android:padding="@dimen/edit_text_padding"
                android:hint="@string/enter_activity"
                android:textColorHint="@color/colorWhite"
                android:textColor="@color/colorWhite"
                android:textStyle="italic"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/todo_name_tv"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/undone_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enter_todo_edt"/>

        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/undone_rv"/>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/done_rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"/>

        <ImageView
                android:id="@+id/add_detail_task_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/edit_text_padding"
                android:background="@mipmap/ic_add_task"
                app:layout_constraintBottom_toBottomOf="@id/enter_todo_edt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/enter_todo_edt"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>

